--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>超かんたんアプリ</title>
+</head>
+<body>
 
+  <h1>こんにちは</h1>
+  <button onclick="sayHello()">押してね</button>
+
+  <script>
+    function sayHello() {
+      alert("こんにちは！");
+    }
+  </script>
+
+</body>
+</html>
