--- a/index.html
+++ b/index.html
@@ -2,18 +2,33 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>超かんたんアプリ</title>
+  <title>かんたんアプリ</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin-top: 50px;
+    }
+    button {
+      font-size: 18px;
+      padding: 10px 20px;
+    }
+  </style>
 </head>
 <body>
 
-  <h1>こんにちは</h1>
-  <button onclick="sayHello()">押してね</button>
+  <h1 id="count">0</h1>
+  <button onclick="plus()">＋1</button>
 
   <script>
-    function sayHello() {
-      alert("こんにちは！");
+    let number = 0;
+
+    function plus() {
+      number++;
+      document.getElementById("count").textContent = number;
     }
   </script>
 
 </body>
 </html>
+
