--- a/index.html
+++ b/index.html
@@ -3,102 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>高知紹介アプリ</title>
+  <title>高知紹介</title>
 
   <style>
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, sans-serif;
-      background: #f2f2f2;
-    }
-
-    header {
-      background: #0b7285;
-      color: white;
-      padding: 16px;
+      font-family: sans-serif;
+      background: #f0f0f0;
       text-align: center;
-      font-size: 20px;
-      font-weight: bold;
     }
 
-    .container {
-      padding: 16px;
+    h1 {
+      background: #2f9e44;
+      color: white;
+      padding: 20px 0;
+      margin: 0;
     }
 
-    .card {
+    .box {
       background: white;
-      border-radius: 16px;
-      margin-bottom: 16px;
-      overflow: hidden;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.1);
-    }
-
-    .image {
-      height: 160px;
-      background: #ccc;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #555;
-      font-size: 14px;
-    }
-
-    .content {
-      padding: 14px;
-    }
-
-    h2 {
-      margin: 0 0 8px;
-      font-size: 18px;
+      margin: 20px;
+      padding: 20px;
+      border-radius: 12px;
     }
 
     p {
-      margin: 0;
       font-size: 14px;
       line-height: 1.6;
-      color: #333;
     }
   </style>
 </head>
 <body>
 
-  <header>高知県の紹介</header>
+  <h1>高知県</h1>
 
-  <div class="container">
+  <div class="box">
+    <p>
+      高知県は四国の南にあり、<br>
+      海と山に囲まれた自然豊かな地域です。
+    </p>
 
-    <div class="card">
-      <div class="image">桂浜の写真</div>
-      <div class="content">
-        <h2>自然</h2>
-        <p>
-          高知県は太平洋に面し、桂浜や四万十川など
-          豊かな自然に恵まれています。
-        </p>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="image">カツオのたたき</div>
-      <div class="content">
-        <h2>食文化</h2>
-        <p>
-          高知といえばカツオのたたき。
-          藁焼きで香ばしく仕上げるのが特徴です。
-        </p>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="image">坂本龍馬</div>
-      <div class="content">
-        <h2>歴史</h2>
-        <p>
-          幕末の英雄・坂本龍馬の出身地としても有名で、
-          多くの史跡があります。
-        </p>
-      </div>
-    </div>
-
+    <p>
+      カツオのたたきや、<br>
+      坂本龍馬で有名です。
+    </p>
   </div>
 
 </body>
