--- a/index.html
+++ b/index.html
@@ -1,53 +1,13 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>高知紹介</title>
-
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background: #f0f0f0;
-      text-align: center;
-    }
-
-    h1 {
-      background: #2f9e44;
-      color: white;
-      padding: 20px 0;
-      margin: 0;
-    }
-
-    .box {
-      background: white;
-      margin: 20px;
-      padding: 20px;
-      border-radius: 12px;
-    }
-
-    p {
-      font-size: 14px;
-      line-height: 1.6;
-    }
-  </style>
-</head>
+<html>
 <body>
 
-  <h1>高知県</h1>
+<h1>高知県</h1>
 
-  <div class="box">
-    <p>
-      高知県は四国の南にあり、<br>
-      海と山に囲まれた自然豊かな地域です。
-    </p>
-
-    <p>
-      カツオのたたきや、<br>
-      坂本龍馬で有名です。
-    </p>
-  </div>
+<p>
+高知県は日本の四国にあります。<br>
+自然が豊かで、カツオのたたきが有名です。
+</p>
 
 </body>
 </html>
