--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- ← スマホ対応：＋1行 -->
   <title>高知紹介</title>
+  <style>body{background:#f0f8ff;font-family:"Hiragino Kaku Gothic ProN","Meiryo",sans-serif;}</style>
 </head>
 <body>
 
 <h1>高知県</h1>
 
+<img src="kochi.jpg" width="300">
+
 <p>
 高知県は四国の南にあります。<br>
-自然が豊かで、カツオのたたきが有名
-です。
+自然が豊かで、カツオのたたきが有名です。
 </p>
+
+</body>
+</html>
